--- a/my-extension/manifest.json
+++ b/my-extension/manifest.json
@@ -4,7 +4,8 @@
     "manifest_version": 2,
     "permissions": [
       "notifications",
-      "activeTab"
+      "activeTab",
+      "alarms"
     ],
     "background": {
       "scripts": ["background.js"],
