--- a/my-extension/manifest.json
+++ b/my-extension/manifest.json
@@ -5,7 +5,8 @@
     "permissions": [
       "notifications",
       "activeTab",
-      "alarms"
+      "alarms",
+      "storage"
     ],
     "background": {
       "scripts": ["background.js"],
